# discord-key-bot

./: .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/: FUNDING.yml
discord_key_bot/: __init__.py  colours.py  utils.py
discord_key_bot/commands/: direct.py  guild.py
discord_key_bot/db/: __init__.py  models.py
discord_key_bot/keyparse/: __init__.py
